--- a/TheContacts/TheContacts/TheContacts.csproj
+++ b/TheContacts/TheContacts/TheContacts.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Acr.UserDialogs" Version="7.1.0.454" />
     <PackageReference Include="Bogus" Version="31.0.3" />
     <PackageReference Include="FreshMvvm" Version="3.0.0" />
     <PackageReference Include="PropertyChanged.Fody" Version="3.2.9" />
